--- a/components/footer.html
+++ b/components/footer.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <div class="text-center md:text-right">
-                    <h4 class="footer-links">Quick Links</h4>
+                    <h4 class="footer-links font-lato" style="font-weight:700; font-size:1.15rem;">Quick Links</h4>
                     <div class="footer-links-grid">
                         <a href="index.html" class="footer-link">Home</a>
                         <a href="about.html" class="footer-link">About</a>
@@ -25,6 +25,8 @@
             </div>
         </div>
         
+        <!-- Add extra space before footer-bottom -->
+        <div style="height:2.5rem;"></div>
         <!-- Bottom Footer -->
         <div class="footer-bottom">
             <div class="footer-bottom-content">
