--- a/components/header.html
+++ b/components/header.html
@@ -12,6 +12,7 @@
                 <a href="index.html" id="nav-home">Home</a>
                 <a href="about.html" id="nav-about">About Us</a>
                 <a href="services.html" id="nav-services">Our Services</a>
+                <a href="journal.html" id="nav-journal">The Koru Journal</a>
                 <a href="contact.html" id="nav-contact">Contact</a>
             </div>
 
@@ -28,6 +29,7 @@
             <a href="index.html" id="mobile-nav-home">Home</a>
             <a href="about.html" id="mobile-nav-about">About Us</a>
             <a href="services.html" id="mobile-nav-services">Our Services</a>
+            <a href="journal.html" id="mobile-nav-journal">The Koru Journal</a>
             <a href="contact.html" id="mobile-nav-contact">Contact</a>
         </div>
     </div>
