--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,20 @@ body {
     }
 }
 
+@media (max-width: 767px) {
+  .navbar-brand {
+    font-size: 1.25rem;
+    background: none;
+    -webkit-background-clip: initial;
+    -webkit-text-fill-color: initial;
+    background-clip: initial;
+    color: var(--primary-blue);
+    text-align: left;
+    font-weight: 700;
+    padding-left: 0.2rem;
+  }
+}
+
 /* ========================================
    HERO SECTIONS
    ======================================== */
